# CAP

./: .gitignore  dataloader.py  dataset_a_text.py  env_info.txt  environment_portable.yml  requirements.txt  test.sh  training.py
configs/: config.yaml  loss.yaml  loss_b.yaml
dataload/: __init__.py  common.py  dataset_a.py  dataset_b.py  text.py
dataset_builder/: pyproject.toml
dataset_builder/configs/: action_vocab.yaml  object_catalog.yaml  physics_profiles.yaml  render.yaml
dataset_builder/docs/: plan_phase0.md
dataset_builder/scripts/: 00_smoke_test.py  10_build_one_episode.py  20_batch_build.py  30_build_pairs.py  40_build_phys_ood.py  50_compute_splits.py  99_validate_dataset.py
dataset_builder/src/assets/: loader.py
dataset_builder/src/common/: config.py  logging.py  paths.py  random_state.py
dataset_builder/src/pairs/: sample_pairs.py
dataset_builder/src/pipeline/: build_episode.py
dataset_builder/src/render/: blender_runner.py
dataset_builder/src/sim/: deform_taichi.py  rigid_pybullet.py
dataset_builder/src/splits/: build_splits.py
dataset_builder/src/tokens/: extract.py
dataset_builder/tests/: test_episode_schema.py
docs/: expected_results.md
eval/: __init__.py  algebraic_gaps.py  composite.py  diversity.py  imitation.py  k_scaling_sweep.py  long_horizon_curve.py  metrics.py  physics_counterfactual.py  physics_metrics.py  render_hook.py  success_rate.py  text_conditioned.py  trajectory_metrics.py  utils.py
model/: __init__.py  loss.py  model.py  utils.py
tools/: aggregate_seeds.py  inspect_friction.py  inspect_topology.py  (+3 more)
(+210 files in other folders)
