[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-a-builder"
version = "0.1.0"
description = "Synthetic multi-view dynamic 3D Dataset-A builder for 4D action tokenizer research."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "rich>=13.0",
  "structlog>=23.0",
]
sim = [
  "pybullet>=3.2",
  "taichi>=1.7",
]
render = [
  "OpenEXR>=3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
